--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -63,7 +63,7 @@
         {% block recipient_sidebar %}
           {% include includes.recipient_sidebar %}
         {% endblock %}
-        <a class="well__cta" href="#search">
+        <a class="efa__button--primary" href="#search">
           {% trans "Continue searching" %}
         </a>
       </div>
