--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_support.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_support.html
@@ -5,7 +5,7 @@
 
   <p>{% trans "Anyone can write nice features. We want to reveal injustice. As an independent non-profit organization, we need your help. Become a member and help us continue our investigations. " %}</p>
 
-  <a class="well__cta" href="https://correctiv.org/unterstuetzen/">
+  <a class="efa__button--primary" href="https://correctiv.org/unterstuetzen/">
     {% trans "Support CORRECTIV" %}
   </a>
 </div>
