--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -68,7 +68,7 @@
           </p>
           {% endif %}
 
-        <a class="well__cta" href="#search">
+        <a class="efa__button--primary" href="#search">
           {% trans "Continue searching" %}
         </a>
 
