--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/css/eurosfueraerzte.css
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/css/eurosfueraerzte.css
@@ -368,7 +368,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center bottom;
-    background-image: url(/static/eurosfueraerzte/img/character-handshake.png);
+    background-image: url(../img/character-handshake.png);
     height: 105%;
     width: 630px;
     left: 85%;
@@ -385,7 +385,7 @@
 }
 @media (min-width: 768px) {
   .efa__search__form--pharma:after {
-    background-image: url(/static/eurosfueraerzte/img/character-pharma-pipet.png);
+    background-image: url(../img/character-pharma-pipet.png);
     height: 110%;
     left: -600px;
   }
