--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
@@ -102,7 +102,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center bottom;
-    background-image: url(/static/eurosfueraerzte/img/character-handshake.png);
+    background-image: url(../img/character-handshake.png);
     height: 105%;
     width: 630px;
     left: 85%;
@@ -122,7 +122,7 @@
   pointer-events: none;
 
   @media (min-width: @screen-sm) {
-    background-image: url(/static/eurosfueraerzte/img/character-pharma-pipet.png);
+    background-image: url(../img/character-pharma-pipet.png);
     height: 110%;
     left: -600px;
   }
