--- a/correctiv_eurosfueraerzte/templates/admin/correctiv_eurosfueraerzte/zerodoctor/change_form.html
+++ b/correctiv_eurosfueraerzte/templates/admin/correctiv_eurosfueraerzte/zerodoctor/change_form.html
@@ -2,20 +2,19 @@
 {% load i18n %}
 {% block object-tools %}
 {{ block.super }}
-{% if original.has_unconfirmed_submissions %}
-  <form method="post" action="{% url 'admin:eurosfueraerzte-zerodocs_confirm' %}">{% csrf_token %}
-    <input type="hidden" name="pk" value="{{ original.pk }}"/>
-    {% for sub in original.get_all_submissions %}
-      {% if not sub.confirmed %}
-        <label>
-            <input type="checkbox" name="sub_id" value="{{ sub.pk }}"/>
-            <span style="text-transform: none">
-              {{ sub.get_kind_display }} - {{ sub.date.year }}
-            </span>
-        </label>
-      {% endif %}
-    {% endfor %}
-    <input type="submit" value="{% trans "Confirm" %}"/>
-  </form>
-{% endif %}
+<h3>{% trans "Zero Doctor" %}</h3>
+<form method="post" action="{% url 'admin:eurosfueraerzte-zerodocs_confirm' %}">{% csrf_token %}
+  <input type="hidden" name="pk" value="{{ original.pk }}"/>
+  {% for sub in original.get_all_submissions %}
+    {% if not sub.confirmed %}
+      <label>
+          <input type="checkbox" name="sub_id" value="{{ sub.pk }}" checked/>
+          <span style="text-transform: none">
+            {{ sub.get_kind_display }} - {{ sub.date.year }}
+          </span>
+      </label>
+    {% endif %}
+  {% endfor %}
+  <input type="submit" value="{% trans "Confirm or Update" %}"/>
+</form>
 {% endblock %}
