--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -46,6 +46,14 @@
   {% endwith %}
 {% endblock %}
 
+{% block "eurosfueraerzte-recipients_similar_address_title" %}
+  {% trans "Organisations and doctors at similar address" %}
+{% endblock %}
+
+{% block "eurosfueraerzte-recipients_nearby_title" %}
+  {% trans "Nearby doctors and organisations" %}
+{% endblock %}
+
 {% block recipient_sidebar %}
 
 <p>
