--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -31,18 +31,26 @@
           {{ name }} has not received benefits from pharma companies under the EFPIA transparency codex in {{ year_list }}.
         {% endblocktrans %}
     </p>
-    {% endif %}
-  {% endwith %}
+  {% endif %}
   {% with observational_years=zerodoc.get_confirmed_observational_years %}
     {% if observational_years %}
       <p>
-        {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
-          {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
-        {% plural %}
-          {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
-        {% endblocktrans %}
-    </p>
+        {% if efpia_years %}
+          {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
+            Additionally, {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+          {% plural %}
+            Additionally, {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+          {% endblocktrans %}
+        {% else %}
+          {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
+            {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+          {% plural %}
+            {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+          {% endblocktrans %}
+        {% endif %}
+      </p>
     {% endif %}
+  {% endwith %}
   {% endwith %}
 {% endblock %}
 
