--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/email_sent.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/email_sent.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<h1>{% trans "Zero Euro Doctors" %}</h1>
+<h1>{{ project_name }}</h1>
 
 <h2>{% blocktrans %}You will receive an email from us with a link that you need to click.{% endblocktrans %}</h2>
 
