--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/header.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/header.less
@@ -113,7 +113,7 @@
   }
 }
 
-.-zerodoc.efa__header__sidebar:after {
+.efa__header__sidebar.-zerodoc:after {
   background-image: none;
 }
 
@@ -146,6 +146,10 @@
   }
 }
 
+.efa__header__content.-zerodoc {
+  width: 45%;
+}
+
 .efa__header__about {
   padding: 30px 15px;
 
@@ -170,4 +174,26 @@
 
 .efa__header__meta {
   display: block;
+}
+
+.efa__header__credentials {
+  display: block;
+  margin: 0;
+  padding: 15px 0 0 0;
+
+  > li {
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.efa__header__credentials-item {
+  color: @efa-blue-dark;
+  margin: 0;
+  padding: .5em 0 0 0;
+
+  &:before{
+    content: '✓ ';
+  }
 }
