Add minimal Leaflet map

--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte.less
@@ -1,3 +1,5 @@
+@node_modules: '../../../../../node_modules';
+
 @efa-blue: #a8d0e0;
 @efa-blue-light: #b8dfef;
 @efa-blue-dark: #316f89;
@@ -15,6 +17,7 @@
 @screen-lg: 1200px;
 
 @tabular-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
 
 .efa__content {
   padding: 15px;
@@ -62,4 +65,4 @@
 @import "eurosfueraerzte/chart";
 @import "eurosfueraerzte/detail-vis";
 @import "eurosfueraerzte/zero-euro-info";
-
+@import "eurosfueraerzte/map";
