--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/map.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/map.less
@@ -1,4 +1,6 @@
 @import (inline) '@{node_modules}/leaflet/dist/leaflet.css';
+@import (inline) '@{node_modules}/leaflet.markercluster/dist/MarkerCluster.css';
+@import (inline) '@{node_modules}/leaflet.markercluster/dist/MarkerCluster.Default.css';
 
 .efa__map {
   height: 360px;
