--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/search.less
@@ -34,7 +34,8 @@
   }
 
   button,
-  input {
+  input[type="text"],
+  input[type="search"] {
     height: 60px;
     border-radius: 0;
     border: 0;
@@ -73,7 +74,8 @@
   padding: 30px 0;
 
   button,
-  input {
+  input[type="text"],
+  input[type="search"] {
     margin-bottom: 15px;
 
     @media (min-width: @screen-md) {
