Adjust AT blurbs

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_index_blurb.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "In 2016, pharma companies in Austria published information about their payments to doctors and other health care professionals and organisations from the last year." context "AT" %}
+  {% trans "Pharma companies in Austria publish information about their payments to doctors and other health care professionals and organisations from the last year." context "AT" %}
 </p>
 <p>
   <a href="/recherchen/euros-fuer-aerzte/artikel/2016/11/30/ihre-geldspritze-herr-doktor-eurosfueraerzte-fuer-aerzte-oesterreich/">{% trans "Read the background article" %}</a>
