--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_recipient_main.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_recipient_main.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "Only around 18 percent of the amount paid to doctors and health care professionals for fees and conference and travel expenses was published on an individual basis. The remaining amount was only published as an aggregate sum. For organizations, 57 percent of the total amount was attributed to individual organizations." context "AT" %}
+  {% trans "Only around 19 percent of the amount paid to doctors and health care professionals for fees and conference and travel expenses was published on an individual basis in 2016. The remaining amount was only published as an aggregate sum. For organizations, 62 percent of the total amount was attributed to individual organizations." context "AT" %}
 </p>
 <p>
   {% trans "Detailed payments to doctors related to studies and non-interventional studies are not published by the pharma companies." context "AT" %}
