--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <p>
-  {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." %}
+  {% trans "Since 2016, the 54 biggest pharma companies in Germany have published their payments to doctors and other health care professionals and organisations from the previous year." %}
 </p>
 <a class="efa__header__more-link" href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">
   {% trans "Read the article" %}
