--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "Only recently the biggest pharma companies in Germany started publishing payments of travel costs, registration and speaking fees to doctors and other health care professionals, given they agreed to the publication." %}
+  {% trans "Since 2016, the biggest pharma companies in Germany have been publishing payments of travel costs, registration and speaking fees to doctors and other health care professionals, given they agreed to the publication." %}
 </p>
 <p>
   <a href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">{% trans "Read the background article" %}</a>
