--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_zero_euro.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_zero_euro.html
@@ -4,7 +4,7 @@
 <h3>{% trans "Zero-Euro-Doctors" %}</h3>
 <p>
   {% blocktrans %}
-    All doctors that have not received payments from the pharma industry in the last year can register here.
+    All doctors who have not accepted money from the pharmaceutical industry can register here.
   {% endblocktrans %}
 </p>
 <p>
