--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -99,7 +99,7 @@
       <div class="page__section -wide efa__content">
         <p>
           {% trans "Pharma companies pay doctors to observe how well patients tolerate certain drugs. These ”observational studies” are useless for science. But doctors receive 669 Euro on average – per patient. This database shows for the first time the scope of these studies – and which drugs are pushed the most." %}
-          <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">{% trans "Read this for more" %}</a>
+          <a href="https://correctiv.org/a/981">{% trans "Read the background article" %}</a>
         </p>
       </div>
     </div>
