--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -27,8 +27,7 @@
 
 {% block header_sidebar_about %}
   <p>
-    {% blocktrans %}Since 2016 the pharma industry publishes the fees paid to individual doctors – if they agreed to the publication. The problem: doctors who don't take any money are not visible in this transparency project.
-    {% endblocktrans %}
+    {% blocktrans %}Doctors who do not accept money from pharmaceutical companies are invisible in the official FSA transparency reports. To change this, CORRECTIV publishes names from doctors who refuse payments from the industry.{% endblocktrans %}
   </p>
   <p>
     <a class="efa__header__more-link" href="{% url "eurosfueraerzte:eurosfueraerzte-zerodocs_index" %}">
