--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_recipient_main.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_recipient_main.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p>
-  {% trans "Only around 30 percent of doctors and health care professionals agreed to the publication of their fees and conference and travel expenses." context "DE" %}
+  {% trans "Only around a quarter of doctors and health care professionals agreed to the publication of their fees and conference and travel expenses." context "DE" %}
 </p>
 <p>
   {% trans "Detailed payments to doctors related to studies and non-interventional studies are not published by the pharma companies." context "DE" %}
