--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -40,7 +40,7 @@
   {% with efpia_years=zerodoc.get_confirmed_efpia_years %}
     {% if efpia_years %}
       <p>
-        {% blocktrans with name=zerodoc.get_full_name year_list=efpia_years|join_list count counter=efpia_years|length %}
+        {% blocktrans with name=zerodoc.get_name year_list=efpia_years|join_list count counter=efpia_years|length %}
           {{ name }} has not received benefits from pharma companies under the EFPIA transparency codex in {{ year_list }}.
         {% plural %}
           {{ name }} has not received benefits from pharma companies under the EFPIA transparency codex in {{ year_list }}.
@@ -51,13 +51,13 @@
     {% if observational_years %}
       <p>
         {% if efpia_years %}
-          {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
+          {% blocktrans with name=zerodoc.get_name year_list=observational_years|join_list count counter=observational_years|length %}
             Additionally, {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
           {% plural %}
             Additionally, {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
           {% endblocktrans %}
         {% else %}
-          {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
+          {% blocktrans with name=zerodoc.get_name year_list=observational_years|join_list count counter=observational_years|length %}
             {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
           {% plural %}
             {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
