--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/map.less
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/less/eurosfueraerzte/map.less
@@ -6,13 +6,16 @@
   position: relative;
   background: @gray-lighter;
 
+  .leaflet-popup-content-wrapper {
+    border-radius: 0;
+  }
 
   .marker-cluster {
     background-color: fade(@efa-blue-dark, 50);
   }
 
   .marker-cluster div {
-    background-color: fade(@efa-blue-dark, 90);
+    background-color: fade(@efa-blue-dark, 80);
     color: white;
   }
 
